tests/NormalTests/paczka1/small_fuzzy/29968995.err
Error in line 2: 2sEnDwN8JWK A444 46,58
Error in line 4: 1eKbi5 A444 17,9
